--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="Team_6">West Indies</string>
     <string name="Team_7">Pakistan</string>
     <string name="Team_8">Bangladesh</string>
+    <string name="confrim">Confrim</string>
 </resources>
